# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile.dockerfile  dockerfile  notes.md  notes.txt  out.txt  recipe.json  spec.yaml  specs.yaml
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: greeting.rs  health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
