[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1.43", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3.22" , features = ["env-filter", "std"] }
tracing-log = "0.1"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.19"


[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [ 
    "runtime-tokio", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.12.23"
